--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 .content {
     margin: 0 auto;
     max-width: 80%;
-    padding:0;
+    padding: 1%;
+    border: 5px solid gray;
 }
 
 #Content {
